@@ -142,7 +142,9 @@ public class Transportation implements
   private static final Set<RouteNetwork> TRUNK_AS_MOTORWAY_BY_NETWORK = Set.of(
     RouteNetwork.CA_TRANSCANADA,
     RouteNetwork.CA_PROVINCIAL_ARTERIAL,
-    RouteNetwork.US_INTERSTATE
+    RouteNetwork.US_INTERSTATE,
+    RouteNetwork.E_ROAD,
+    RouteNetwork.A_ROAD
   );
   private static final Set<String> CA_AB_PRIMARY_AS_ARTERIAL_BY_REF = Set.of(
     "2", "3", "4"
@@ -290,8 +292,15 @@ public class Transportation implements
       RouteNetwork networkType = null;
       String network = relation.getString("network");
       String ref = relation.getString("ref");
+      String name = nullIfEmpty(relation.getString("name"));
+      String colour = coalesce(
+        nullIfEmpty(relation.getString("colour")), nullIfEmpty(relation.getString("ref:colour")));
 
-      if ("US:I".equals(network)) {
+      if ("e-road".equals(network)) {
+        networkType = RouteNetwork.E_ROAD;
+      } else if ("AsianHighway".equals(network)) {
+        networkType = RouteNetwork.A_ROAD;
+      } else if ("US:I".equals(network)) {
         networkType = RouteNetwork.US_INTERSTATE;
       } else if ("US:US".equals(network)) {
         networkType = RouteNetwork.US_HIGHWAY;
@@ -328,7 +337,8 @@ public class Transportation implements
       };
 
       if (network != null || rank < 3) {
-        return List.of(new RouteRelation(coalesce(ref, ""), network, networkType, (byte) rank, relation.id()));
+        return List
+          .of(new RouteRelation(coalesce(ref, ""), network, name, colour, networkType, (byte) rank, relation.id()));
       }
     }
     return null;
@@ -366,6 +376,7 @@ public class Transportation implements
               };
               result.add(new RouteRelation(refMatcher.group(),
                 networkType == null ? null : networkType.network,
+                null, null,
                 networkType, (byte) -1, 0));
             }
           } catch (GeometryException e) {
@@ -391,7 +402,9 @@ public class Transportation implements
                 case "trunk", "primary" -> RouteNetwork.IE_NATIONAL;
                 default -> RouteNetwork.IE_REGIONAL;
               };
-              result.add(new RouteRelation(refMatcher.group(), networkType.network, networkType, (byte) -1, 0));
+              result.add(new RouteRelation(refMatcher.group(),
+                networkType.network, null, null,
+                networkType, (byte) -1, 0));
             }
           } catch (GeometryException e) {
             e.log(stats, "omt_transportation_name_ie_test",
@@ -406,7 +419,7 @@ public class Transportation implements
 
   RouteRelation getRouteRelation(Tables.OsmHighwayLinestring element) {
     List<RouteRelation> all = getRouteRelations(element);
-    return all.isEmpty() ? null : all.get(0);
+    return all.isEmpty() ? null : all.getFirst();
   }
 
   @Override
@@ -436,6 +449,8 @@ public class Transportation implements
       Integer rampAboveZ12 = (highwayRamp || element.isRamp()) ? 1 : null;
       Integer rampBelowZ12 = highwayRamp ? 1 : null;
 
+      boolean expressway = element.expressway() && !"motorway".equals(highway) && !(element.isRamp() || highwayRamp);
+
       FeatureCollector.Feature feature = features.line(LAYER_NAME).setBufferPixels(BUFFER_SIZE)
         // main attributes at all zoom levels (used for grouping <= z8)
         .setAttr(Fields.CLASS, highwayClass)
@@ -443,7 +458,7 @@ public class Transportation implements
         .setAttr(Fields.NETWORK, networkType != null ? networkType.name : null)
         .setAttrWithMinSize(Fields.BRUNNEL, brunnel(element.isBridge(), element.isTunnel(), element.isFord()), 4, 4, 12)
         // z8+
-        .setAttrWithMinzoom(Fields.EXPRESSWAY, element.expressway() && !"motorway".equals(highway) ? 1 : null, 8)
+        .setAttrWithMinzoom(Fields.EXPRESSWAY, expressway ? 1 : null, 8)
         // z9+
         .setAttrWithMinSize(Fields.LAYER, nullIfLong(element.layer(), 0), 4, 9, 12)
         .setAttrWithMinzoom(Fields.BICYCLE, nullIfEmpty(element.bicycle()), 9)
@@ -643,7 +658,9 @@ public class Transportation implements
     GB_PRIMARY("gb-primary", "omt-gb-primary"),
     IE_MOTORWAY("ie-motorway", "omt-ie-motorway"),
     IE_NATIONAL("ie-national", "omt-ie-national"),
-    IE_REGIONAL("ie-regional", "omt-ie-regional");
+    IE_REGIONAL("ie-regional", "omt-ie-regional"),
+    E_ROAD("e-road", null),
+    A_ROAD("a-road", null);
 
     final String name;
     final String network;
@@ -658,6 +675,8 @@ public class Transportation implements
   record RouteRelation(
     String ref,
     String network,
+    String name,
+    String colour,
     RouteNetwork networkType,
     byte rank,
     @Override long id
@@ -669,6 +688,8 @@ public class Transportation implements
         MemoryEstimator.estimateSize(rank) +
         POINTER_BYTES + estimateSize(ref) +
         POINTER_BYTES + estimateSize(network) +
+        POINTER_BYTES + estimateSize(name) +
+        POINTER_BYTES + estimateSize(colour) +
         POINTER_BYTES + // networkType
         MemoryEstimator.estimateSizeLong(id);
     }
